<resources>
    <string name="app_name">emptyApp</string>
    <string name="ahmed_hassan">Ahmed hassan</string>
    <string name="engineer">Engineer</string>
    <string name="uk">UK</string>
    <string name="_4_5Rating">4.5</string>
    <string name="_150_reviewsNumber">(150 Reviews)</string>
    <string name="_3_hrTime">3 hr</string>
    <string name="russianCity">Russian</string>
    <string name="_5_days_agoTime">5 Days ago</string>
</resources>